--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+html,
+body {
+    padding: 0;
+    margin: 0;
+    font-family: ;
+}
+
+* {
+    box-sizing: border-box;
+}
 body {
     background-color: hsl(30, 38%, 92%);
     width: 100vw;
@@ -6,10 +16,33 @@ body {
 
 main {
     display: flex;
-    width: 45rem;
-    height: 30rem;
-    background-color: black;
-    margin: 12rem 3rem 6rem 9rem;
-    padding: 5rem;
-   
+    align-items: center;
+    justify-content: center;
+    width: 40rem;
+    height: 25rem;
+    margin: auto;
+   background-color: #f4ebe4; 
+  /* margin: 12rem 3rem 6rem 9rem;
+    padding: 5rem; */
+}
+
+.section-one {
+    width: 20rem;
+    height: 20rem;
+    
+    
+}
+
+.section-one img {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px 0 0 5px;
+    
+}
+
+.section-2 {
+    width: 20rem;
+    height: 20rem; 
+    padding: 2rem;
+    background-color: white;
 }
